--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <title>bounceball</title>
         <link rel="stylesheet" href="style.css" type="text/css">
-        <script src="lib/dat.gui.min.js"></script>        
+        <script src="lib/dat.gui.min.js"></script>  
+        <script src="lib/stats.min.js"></script>  
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
 
     </head>
